--- a/ex4/pom.xml
+++ b/ex4/pom.xml
@@ -69,12 +69,14 @@
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-jpa</artifactId>
+      <classifier>jakarta</classifier>
       <version>5.1.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-apt -->
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
+      <classifier>jakarta</classifier>
       <version>5.1.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-core -->
