--- a/ex4/pom.xml
+++ b/ex4/pom.xml
@@ -66,17 +66,19 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa -->
+    <!-- The major version was updated from 2.x.x -> 3.x.x,
+     and jakarta was used instead of javax.-->
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-jpa</artifactId>
-      <classifier>jakarta</classifier>
+      <classifier>jakarta</classifier><!-- important -->
       <version>5.1.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-apt -->
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
-      <classifier>jakarta</classifier>
+      <classifier>jakarta</classifier><!-- important -->
       <version>5.1.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-core -->
@@ -85,6 +87,7 @@
       <artifactId>querydsl-core</artifactId>
       <version>5.1.0</version>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -101,7 +104,7 @@
           </excludes>
         </configuration>
       </plugin>
-      <!--querydsl setting :: com.mysema.maven-->
+      <!-- querydsl setting :: com.mysema.maven -->
       <plugin>
         <groupId>com.mysema.maven</groupId>
         <artifactId>apt-maven-plugin</artifactId>
@@ -118,8 +121,7 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
-</project>
 
+</project>
