--- a/ex5/build.gradle
+++ b/ex5/build.gradle
@@ -33,6 +33,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
+	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '5.1.0'
+	// https://mvnrepository.com/artifact/com.querydsl/querydsl-apt
+	implementation group: 'com.querydsl', name: 'querydsl-apt', version: '5.1.0'
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
