--- a/ex5/build.gradle
+++ b/ex5/build.gradle
@@ -34,26 +34,54 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	// https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
-	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '5.1.0'
-	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
+	// Querydsl setting
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 }
 
+//test {
+//    useJUnitPlatform()
+//}
 tasks.named('test') {
 	useJUnitPlatform()
 }
-def querydslDir =layout.buildDirectory.dir("generated/querydsl").get().asFile
-
-sourceSets{
-	main.java.srcDirs += [querydslDir]
+clean {
+	delete file('src/main/generated')
 }
-tasks.withType(JavaCompile){
-	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
-}
-clean.doLast {
-file(querydslDir).deleteDir();
-}
-
+// code for queryDSL
+//def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+//
+//tasks.withType(JavaCompile) {
+//    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
+//}
+//
+//sourceSets {
+//    main.java.srcDirs += [ querydslDir ]
+//}
+//
+//clean.doLast {
+//    file(querydslDir).deleteDir()
+//}
+//clean {
+//    delete file('src/main/generated')
+//}
+////querydsl 추가 시작
+//
+//def querydslDir = file('build/generated/querydsl')
+//
+//querydsl {
+//    jpa = true
+//    querydslSourcesDir = querydslDir
+//}
+//sourceSets {
+//    main.java.srcDir querydslDir
+//}
+//configurations {
+//    querydsl.extendsFrom compileClasspath
+//}
+//compileQuerydsl {
+//    options.annotationProcessorPath = configurations.querydsl
+//}
