--- a/ex2/src/main/resources/application.properties
+++ b/ex2/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.datasource.username=db7
 spring.datasource.password=1234
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
