--- a/ex7/pom.xml
+++ b/ex7/pom.xml
@@ -108,6 +108,14 @@
 			<version>0.4.20</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.1.2.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
