--- a/ex7/src/main/resources/application.properties
+++ b/ex7/src/main/resources/application.properties
@@ -36,3 +36,6 @@ com.example.upload.path=c:\\upload
 #log level ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 #logging.level.org.springframework.security.web=trace
 #logging.level.com.example=debug
+
+#OAuth2 include
+spring.profiles.include = oauth
