--- a/ex7/.gitignore
+++ b/ex7/.gitignore
@@ -18,6 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
+application-oauth.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,5 +32,3 @@ build/
 
 ### VS Code ###
 .vscode/
-#여기 안에있는 파일을 git에 올라가지 않음
-#application-oauth.properties
