--- a/ex7/src/main/resources/application.properties
+++ b/ex7/src/main/resources/application.properties
@@ -39,3 +39,6 @@ com.example.upload.path=c:\\upload
 
 # OAuth2 include
 spring.profiles.include=oauth
+
+server.error.whitelabel.enabled=false
+server.error.path=/notfound
