--- a/ex7/src/main/resources/application.properties
+++ b/ex7/src/main/resources/application.properties
@@ -41,4 +41,4 @@ com.example.upload.path=c:\\upload
 spring.profiles.include=oauth
 
 server.error.whitelabel.enabled=false
-server.error.path=/notfound
+server.error.path=/error
