--- a/InstaPrj/pom.xml
+++ b/InstaPrj/pom.xml
@@ -137,7 +137,8 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!-- querydsl setting :: com.mysema.maven -->
+<!--
+			&lt;!&ndash; querydsl setting :: com.mysema.maven &ndash;&gt;
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
@@ -154,6 +155,7 @@
 					</execution>
 				</executions>
 			</plugin>
+-->
 		</plugins>
 	</build>
 
