--- a/InstaPrj/src/main/resources/application.properties
+++ b/InstaPrj/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # App name
-spring.application.name=ex7
+spring.application.name=InstaPrj
 
 # Server port
 server.port=8080
 
 # Context path
-server.servlet.context-path=/ex7
+server.servlet.context-path=/InstaPrj
 
 # Restart WAS
 spring.devtools.livereload.enabled=true
@@ -14,7 +14,7 @@ spring.devtools.livereload.enabled=true
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/db7
 spring.datasource.username=db7
-spring.datasource.password=1234
+spring.datasource.password=zxc123
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -39,3 +39,6 @@ com.example.upload.path=c:\\upload
 
 # OAuth2 include
 spring.profiles.include=oauth
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
