--- a/ex7/src/main/resources/application.properties
+++ b/ex7/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.devtools.livereload.enabled=true
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/db7
 spring.datasource.username=db7
-spring.datasource.password=zxc123
+spring.datasource.password=1234
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -32,3 +32,10 @@ spring.servlet.multipart.max-file-size=10MB
 
 # File upload setting for Application
 com.example.upload.path=c:\\upload
+
+#log level ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
+#logging.level.org.springframework.security.web=trace
+#logging.level.com.example=debug
+
+# OAuth2 include
+spring.profiles.include=oauth
